--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <main>
     <section>
       <img id="logo" src='img/logo.png'/>
+      <hr id="separator">
       <article id="article1">
         <h2>Article 1</h2>
         <img src="img/workplace.jpeg"/>
