--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@
     </section>
     <a href="#" id="back_to_top">Back To Top</a>
   </main>
-  <footer>Copyright © Germain GAILLARD</footer>
+  <footer>Copyright © Germain GAILLARD
+    <a href="mailto:gaillard.germain@gmail.com">&lt;gaillard.germain@gmail.com&gt;</a>
+  </footer>
 </body>
 <script type="text/javascript" src="js/script.js"></script>
 </html>
