--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 </div>
   <main>
     <section>
-      <img id="logo" src='img/logo.png'/>
+      <img id="logo" src="img/logo.png/" alt="">
       <hr id="separator">
       <article id="article1">
         <h2>Article 1</h2>
-        <img src="img/workplace.jpeg"/>
+        <img src="img/workplace.jpeg"/ alt="">
         <h3>Lorem ipsum dolor sit amet</h3>
-        <div class=content>
+        <div class="content">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -77,7 +77,7 @@
       </article>
       <article id="article2">
         <h2>Article 2</h2>
-        <img src="img/trading.jpg"/>
+        <img src="img/trading.jpg"/ alt="">
         <h3>Duis aute irure dolor</h3>
         <div class="content">
           <p>
@@ -103,7 +103,7 @@
       </article>
       <article id="article3">
         <h2>Article 3</h2>
-        <img src="img/laptop.jpeg"/>
+        <img src="img/laptop.jpeg"/ alt="">
         <h3>Ex his quidam aeternitati</h3>
         <div class="content">
           <p>
