added script to fill the summary nav with the number of articles...

--- a/index.html
+++ b/index.html
@@ -26,16 +26,13 @@
     </div>
     <nav id="sum_menu" class="hidden">
       <a href="#">Index</a>
-      <a href="#article1">Art. 1</a>
-      <a href="#article2">Art. 2</a>
-      <a href="#article3">Art. 3</a>
     </nav>
 </div>
   <main>
     <section>
       <img id="logo" src="img/logo.png/" alt="">
       <hr id="separator">
-      <article id="article1">
+      <article id="article1" class="articles">
         <h2>Article 1</h2>
         <img src="img/workplace.jpeg"/ alt="">
         <h3>Lorem ipsum dolor sit amet</h3>
@@ -75,7 +72,7 @@
         <address>John SMITH &lt;smith.john@foobar.org&gt;</address>
         <button class="more">View more</button>
       </article>
-      <article id="article2">
+      <article id="article2" class="articles">
         <h2>Article 2</h2>
         <img src="img/trading.jpg"/ alt="">
         <h3>Duis aute irure dolor</h3>
@@ -101,7 +98,7 @@
         <address>Anna Read &lt;dear.anita@dummy.com&gt;</address>
         <button class="more">View more</button>
       </article>
-      <article id="article3">
+      <article id="article3" class="articles">
         <h2>Article 3</h2>
         <img src="img/laptop.jpeg"/ alt="">
         <h3>Ex his quidam aeternitati</h3>
