summary at top and position fixed

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
   </script>
 </head>
 <body>
-  <header>
-    <h1>Work At Beach</h1>
-    <p>Sea, script and sun...</p>
-  </header>
   <div id="summary_flex">
     <div id="summary">
-      <span>Summary ></span>
+      <span>Summary...</span>
     </div>
     <nav id="sum_menu" class="hidden">
       <a href="#">Index</a>
     </nav>
-</div>
+  </div>
+  <header>
+    <h1>Work At Beach</h1>
+    <p>Sea, script and sun...</p>
+  </header>
   <main>
     <section>
       <img id="logo" src="img/logo.png/" alt="">
@@ -107,7 +107,7 @@
             Ex his quidam aeternitati se commendari posse per statuas aestimantes
             eas ardenter adfectant quasi plus praemii de figmentis aereis sensu
             carentibus adepturi, quam ex conscientia honeste recteque factorum,
-            easque auro curant inbracteari
+            easque auro curant inbracteari.
           </p>
           <p>
             Quod Acilio Glabrioni delatum est primo,
